applied new knockback mechanics to tnt sumo